--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="sports">Sports</string>
     <string name="paid_subscription">Paid Subscription</string>
     <string name="save">Save</string>
-    <string-array name="sort_array">
-        <item>Newest</item>
-        <item>Oldest</item>
-    </string-array>
+    <string name="loading">Loading</string>
+
+    <string name="no_internet_text">You are not connected to Internet.\n Check your internet connection</string>
+    <string name="snackbar_internet_action_text">Turn on Internet</string>
 </resources>
