--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="sports">Sports</string>
     <string name="paid_subscription">Paid Subscription</string>
     <string name="save">Save</string>
+    <string name="search">Search</string>
+    <string name="cancel">Cancel</string>
     <string name="loading">Loading</string>
 
     <string name="no_internet_text">You are not connected to Internet.\n Check your internet connection</string>
